5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1764_674.log
== TEST (2019-05-21 17:52:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input()))

print(size(n))
print(n[0])
print(n[-])
print(max(n))
print(min(n))
print(sum(n))
print(sum(n)/size(n))
-- ERROR:
File "XXXX", line 8
    print(n[-])
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:52:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input()))

print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(sum(n)/size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:52:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input()))

print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(sum(n)/size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:52:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input()))

print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(sum(n)/size(n))
-- EXECUTION TIME:
0.325934
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.647727272727273
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:53:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input()))

print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(sum(n)/size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:26:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input("")))

a=size(n)
b=n[0]
c=n[-1]
d=max(n)
e=min(n)
f=sum(n)
g=sum(n)/size(n)

print(a,b,c,d,e,f,g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:27:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input("")))

a=size(n)
b=n[0]
c=n[-1]
d=max(n)
e=min(n)
f=sum(n)
g=sum(n)/size(n)

print(a,b,c,d,e,f,g)
-- EXECUTION TIME:
0.495174
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88 13 7 20 1 937 10.647727272727273
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:27:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input("")))

a=size(n)
b=n[0]
c=n[-1]
d=max(n)
e=min(n)
f=sum(n)
g=round(sum(n)/size(n),2)

print(a,b,c,d,e,f,g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:27:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n=array(eval(input("")))

a=size(n)
b=n[0]
c=n[-1]
d=max(n)
e=min(n)
f=sum(n)
g=round(sum(n)/size(n),2)

print(a,b,c,d,e,f,g)
-- EXECUTION TIME:
0.434455
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88 13 7 20 1 937 10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
